# NICO-software

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  LICENSE  LICENSE-CC-BY-SA-4.0  README.md  migration-to-opencv3.todo
api/: NICO-python3.bash  NICO-setup-OLD.bash  NICO-setup.bash  NICO-setup.sh  NICO-test.bash  README  install_apt.sh  pyrep_env.bash  readme.md
api-doc/: HighNico.rst  Makefile  Motion.rst  RosNico.rst  conf.py  index.rst  make.bat
api/src/nicoface/: CMakeLists.txt  package.xml  setup.py
api/src/nicoface/scripts/nicoface/: CapacitiveSensors.py  FaceExpression.py  SerialConnectionManager.py  getCapacitiveReadings.py  sendFaceExpression.py  wavelet.py
api/src/nicoface/tests/: face_test.py  serial_test.py
api/src/nicomoveit/kinematics/: CMakeLists.txt  experiment_setup  package_.xml
api/src/nicomoveit/kinematics/launch/: experiments.launch  ikTest.launch  kinematics_server.launch
api/src/nicomoveit/kinematics/msg/: FloatList.msg
api/src/nicomoveit/kinematics/src/: experiments  ikTest.cpp  ik_test.py  kinematics_server.cpp
api/src/nicomoveit/kinematics/srv/: FK_request.srv  IK_request.srv  collision_check.srv
api/src/nicomoveit/kinematics/testPoses/: current  grid_sideGrasp  grid_topGrasp  random  reachable  reachable_old
api/src/nicoros/: CMakeLists.txt  camera.launch  nicoros.launch  package.xml  stereoVision.launch
api/src/nicoros/launch/: camera.launch  joint_controller.launch  nicomoveit_demo.launch  nicomoveit_demo_visual.launch  nicoros.launch  nicoros_moveit.launch  nicoros_moveit_visual.launch  nicoros_real.launch  nicoros_real_moveit.launch  nicoros_real_moveit_visual.launch  nicoros_vision_Logitech_C905.launch  nicoros_vision_See3Cam_CU135.launch  nicoros_vision_vild_demo.launch  stereoVision.launch
api/src/nicoros/scripts/: AudioPlayer.py  AudioPlayerExample.py  AudioStream.py  CapacitiveExample.py  CapacitiveSensors.py  FaceExample.py  FaceExpression.py  ImageSubscriberExample.py  JointController.py  JointStatePublisher.py  Motion.py  Optoforce.py  OptoforceExample.py  OptoforceMultichannel.py  OptoforceMultichannelExample.py  Pyrep.py  PyrepExample.py  RosLoggingHandler.py  StreamReceiverExample.py  TextToSpeech.py  TextToSpeechExample.py  TrajectoryServer.py  TrajectoryTest.py  Vision.py  yesno.py  yesno_example.py
arduino/: faceExpressions.ino  faceExpressionsExtended.ino
json/: nico_humanoid_full_with_grippers_unchecked.json  nico_humanoid_legged.json  nico_humanoid_legged_minimal_for_multimodal_recordings.json  nico_humanoid_legged_with_hands_mod-vrep.json  nico_humanoid_legged_with_hands_mod-vrep_with_legs.json  nico_humanoid_legged_with_hands_mod.json  nico_humanoid_upper.json  nico_humanoid_upper_body_control_general.json  nico_humanoid_upper_rh5d.json  nico_humanoid_upper_rh7d.json  nico_humanoid_upper_with_hands.json  nico_humanoid_upper_with_hands_vrep.json  nico_humanoid_vrep.json  nico_vision_Logitech_C905_settings.json  nico_vision_See3CAM_CU135_settings.json  nico_vision_calibration_params.json  readme.txt  rh5d_hands.json  rh7d_hands.json  update_limits.py
moves_and_positions/: copy of pos_throw_ball.csv  do_squeeze_do.csv  get_squeeze_do.csv  mov_cover_eyes_from_start_right.csv  mov_temp.csv  (+57 more)
(+558 files in other folders)
