<?xml version="1.0"?>
<package>
  <name>nicoface</name>
  <version>0.0.1</version>
  <description>Facial expression controls for the NICO robot</description>

  <maintainer email="4gaede@informatik.uni-hamburg.de">Connor Gaede</maintainer>
  <license>GPLv3+</license>
  <url type="repository">https://git.informatik.uni-hamburg.de/wtm/NICO-software</url>

  <author email="strahl@informatik.uni-hamburg.de">Erik Strahl</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nico_msg</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nico_msg</run_depend>

  <export>
  </export>
</package>
