<?xml version="1.0"?>
<package>
  <name>nicoros</name>
  <version>0.0.1</version>
  <description>ROS interface for all NICO modules</description>

  <maintainer email="2soll@informatik.uni-hamburg.de">Marcus Soll</maintainer>
  <license>GPLv3+</license>
  <url type="repository">https://git.informatik.uni-hamburg.de/wtm/NICO-software</url>

  <author email="2soll@informatik.uni-hamburg.de">Marcus Soll</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nico_msg</build_depend>
  <build_depend>motion</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nico_msg</run_depend>
  <run_depend>motion</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
  </export>
</package>
